# tourismatho

./: .gitignore  Dockerfile  README.md  pyproject.toml
data/: locations.csv  locations.ods  locations2.csv
notebooks/: model_prototyping.ipynb
tests/: test_tourismatho.py
